--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
         
         const continents = {
             'US': 'America', 'CA': 'America', 'BR': 'America', 'CL': 'America', 'AR': 'America',
-            'DE': 'Europe', 'GB': 'Europe', 'PL': 'Europe', 'FR': 'Europe', 'NL': 'Europe', 'RU': 'Europe', 'FI': 'Europe', 'UA': 'Europe', 'NO': 'Europe', 'SE': 'Europe', 'IE': 'Europe', 
-            'KR': 'Asia', 'JP': 'Asia', 'TW': 'Asia', 'ID': 'Asia', 'PH': 'Asia', 'MY': 'Asia', 'SG': 'Asia', 'TH': 'Asia', 'CN': 'Asia', 
+            'DE': 'Europe', 'GB': 'Europe', 'PL': 'Europe', 'FR': 'Europe', 'NL': 'Europe', 'RU': 'Europe', 'FI': 'Europe', 'UA': 'Europe', 'NO': 'Europe', 'SE': 'Europe', 'IE': 'Europe', 'IT': 'Europe', 'RO': 'Europe', 
+            'KR': 'Asia', 'JP': 'Asia', 'TW': 'Asia', 'ID': 'Asia', 'PH': 'Asia', 'MY': 'Asia', 'SG': 'Asia', 'TH': 'Asia', 'CN': 'Asia', 'HK': 'Asia', 
             'AU': 'Oceania', 'NZ': 'Oceania',
             // Add more countries and their continents as needed
         };
